--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div id="logo">
                     <p>Placeholder</p>
                 </div>
-                <div class="nav-btn flex-child">
+                <div class="nav-btn flex-child ml-auto">
                     <p> Home </p>
                 </div>
                 <div class="nav-btn flex-child">
@@ -31,12 +31,66 @@
             asdasd
         </div>
 
-        <div id="pages">
-
+        <div id="pages" class="flex-container">
+            <div id="slider-switch-l">
+                <p>left</p>
+            </div>
+            <div id="slider-img">
+                <img src="smth.png" alt="img txt">
+            </div>
+            <div id="slider-block">
+                <div id="slider-title">
+                    <p>Page Title</p>
+                </div>
+                <div id="slider-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
+                </div>
+                <div id="slider-btn">
+                    <p>Visit</p>
+                </div>
+            </div>
+            <div id="slider-switch-r">
+                <p>right</p>
+            </div>
         </div>
 
-        <div id="footer">
+        <div class="info-container flex-container background-l">
+            <div class="info-container-image">
+                <img src="smth.png" alt="img txt">
+            </div>
+            <div class="info-block">
+                <div class="info-block-title">
+                    <p>Section Title</p>
+                </div>
+                <div class="info-block-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
+                </div>
+            </div>
+        </div>
 
+        <div class="info-container flex-container background-l">
+            <div class="info-block">
+                <div class="info-block-title">
+                    <p>Section Title</p>
+                </div>
+                <div class="info-block-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
+                </div>
+            </div>
+            <div class="info-container-image">
+                <img src="smth.png" alt="img txt">
+            </div>
+        </div>
+
+        <div id="footer" class="background-d flex-container">
+            <div id="description">
+                <p class="white-txt">Virginia TSA State Confrence 2024</p>
+            </div>
+            <div id="creators">
+                <p class="white-txt">Alexander Bloom</p>
+                <p class="white-txt">Aditya Nair</p>
+                <p class="white-txt">Samuel Earle</p>
+            </div>
         </div>
     </div>
 </body>
