Pages and links
added pages and links so such, the initiatives page is laid out and can be worked on

--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
     <div id="pg-content">
         <div id="header">
             <div id="nav-bar" class="flex-container">
-                <div id="logo">
-                    <p>Placeholder</p>
-                </div>
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Home </p>
-                </div>
-                <div class="nav-btn flex-child">
-                    <p> Home </p>
-                </div>
-                <div class="nav-btn flex-child">
-                    <p> Home </p>
-                </div>
-                <div class="nav-btn flex-child">
-                    <p> Credits </p>
-                </div>
+                <a href="./index.html">
+                    <div id="logo">
+                        <p> Placeholder </p>
+                    </div>
+                </a>
+                <a href="./initiatives.html">
+                    <div class="nav-btn flex-child ml-auto">
+                        <p> Initiatives </p>
+                    </div>
+                </a>
+                <a href="./initiatives.html">
+                    <div class="nav-btn flex-child ml-auto">
+                        <p> Initiatives </p>
+                    </div>
+                </a>
+                <a href="./initiatives.html">
+                    <div class="nav-btn flex-child ml-auto">
+                        <p> Initiatives </p>
+                    </div>
+                </a>
+                <a href="./initiatives.html">
+                    <div class="nav-btn flex-child ml-auto">
+                        <p> Credits </p>
+                    </div>
+                </a>
             </div>
         </div>
 
@@ -45,9 +55,11 @@
                 <div id="slider-text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
                 </div>
-                <div id="slider-btn">
-                    <p>Visit</p>
-                </div>
+                <a id="slider-link">
+                    <div id="slider-btn">
+                        <p>Visit</p>
+                    </div>
+                </a>
             </div>
             <div id="slider-switch-r">
                 <p>right</p>
