--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Webmaster-2024</title>
     <link href="/styles/index.css" rel="stylesheet">
+    <script type="module" src="./scripts/index.js"></script>
 </head>
 <body>
     <div id="pg-content">
@@ -50,10 +51,10 @@
             </div>
             <div id="slider-block">
                 <div id="slider-title">
-                    <p>Page Title</p>
+                    <p id="slider-title-txt">Page Title</p>
                 </div>
                 <div id="slider-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
+                    <p id="slider-text-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
                 </div>
                 <a id="slider-link">
                     <div id="slider-btn">
