--- a/initiatives.html
+++ b/initiatives.html
@@ -44,80 +44,45 @@
 
         <div id="solution-cards">
             <div id="row-1" class="flex-container">
-                <div  id="electric-vehicles" class="card">
+                <a href="electricCar.html" id="electric-vehicles" class="card">
                     <div class="card-title">
                         <p>Electric Vehicles</p>
                     </div>
-                    <a>
-                        <div class="card-btn">
-                            <p>Learn More</p>
-                        </div>
-                    </a>
-                </div>
-                <div  id="solar-energy" class="card">
+                </a>
+                <a href="solar.html" id="solar-energy" class="card">
                     <div class="card-title">
                         <p>Solar Energy</p>
                     </div>
-                    <a>
-                        <div class="card-btn">
-                            <p>Learn More</p>
-                        </div>
-                    </a>
-                </div>
-                <div id="insulation" class="card">
+                </a>
+                <a href="insulation.html" id="insulation" class="card">
                     <div class="card-title">
                         <p>Home Insulation</p>
                     </div>
-                    <a>
-                        <div class="card-btn">
-                            <p>Learn More</p>
-                        </div>
-                    </a>
-                </div>
+                </a>
             </div>
 
             <div id="row-2" class="flex-container">
-                <div id="air-condiitoning" class="card">
+                <a href="conditioning.html" id="air-condiitoning" class="card">
                     <div class="card-title">
                         <p>Air Conditioning</p>
                     </div>
-                    <a>
-                        <div class="card-btn">
-                            <p>Learn More</p>
-                        </div>
-                    </a>
-                </div>
-                <div id="household-changes" class="card">
+                </a>
+                <a href="houshold.html" id="household-changes" class="card">
                     <div class="card-title">
                         <p>Household Changes</p>
                     </div>
-                    <a>
-                        <div class="card-btn">
-                            <p>Learn More</p>
-                        </div>
-                    </a>
-                </div>
-                <div id="passive-water-heating" class="card">
+                </a>
+                <a href="water.html" id="passive-water-heating" class="card">
                     <div class="card-title">
                         <p>Passive Water Heating</p>
                     </div>
-                    <a>
-                        <div class="card-btn">
-                            <p>Learn More</p>
-                        </div>
-                    </a>
-                </div>
+                </a>
             </div>
         </div>
 
         <div id="footer" class="background-d flex-container">
             <div id="description">
                 <p class="white-txt">Virginia TSA State Confrence 2024</p>
-            </div>
-            <div id="creators">
-                <p class="white-txt">Alexander Bloom</p>
-                <p class="white-txt">Aditya Nair</p>
-                <p class="white-txt">Samuel Earle</p>
             </div>
         </div>
     </div>
