added content to single page
fun!

--- a/conditioning.html
+++ b/conditioning.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Webmaster-2024</title>
     <link href="/styles/index.css" rel="stylesheet">
+    <link href="/styles/info.css" rel="stylesheet">
     <script type="module" src="./scripts/index.js"></script>
 </head>
 <body>
@@ -38,6 +39,29 @@
         </div>
     </div>
 
+    <div id="information">
+        <div id="info-head">
+            <div id="info-title">
+                <h1>Placeholder</h1>
+            </div>
+
+            <a id="return">
+                Back to Home
+            </a>
+        </div>
+
+        <div id="info-text">
+            <div id="info-desc">
+                Info lol
+            </div>
+            <div id="info-tax">
+                taxes
+            </div>
+            <div id="info-environ">
+                water
+            </div>
+        </div>
+    </div>
 
     <div id="footer" class="background-d flex-container">
         <div id="description">
