--- a/conditioning.html
+++ b/conditioning.html
@@ -45,7 +45,7 @@
                 <h1>Placeholder</h1>
             </div>
 
-            <a id="return">
+            <a href="index.html" id="return">
                 Back to Home
             </a>
         </div>
