--- a/conditioning.html
+++ b/conditioning.html
@@ -52,13 +52,16 @@
 
         <div id="info-text">
             <div id="info-desc">
-                Info lol
+                <h2>About ----</h2>
+                <p> </p>
             </div>
             <div id="info-tax">
-                taxes
+                <h2>Tax Information</h2>
+                <p> </p>
             </div>
             <div id="info-environ">
-                water
+                <h2>Environmental Effect</h2>
+                <p> </p>
             </div>
         </div>
     </div>
