--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
             <div id="nav-bar" class="flex-container">
                 <a href="./index.html">
                     <div id="logo">
-                        <p> Placeholder </p>
-                    </div>
-                </a>
-                <a href="./initiatives.html">
-                    <div class="nav-btn flex-child ml-auto">
-                        <p> Initiatives </p>
-                    </div>
-                </a>
-                <a href="./initiatives.html">
-                    <div class="nav-btn flex-child ml-auto">
-                        <p> Initiatives </p>
+                        <p> EcoFriend </p>
                     </div>
                 </a>
                 <a href="./initiatives.html">
@@ -38,23 +28,30 @@
             </div>
         </div>
 
-        <div id="splash-screen" class="test">
-            asdasd
+        <div id="splash-screen">
+            <div id="home">
+                <div id="home-title">
+                    EcoFriend
+                </div>
+                <div id="statement">
+                    Join us to build a sustainable future!
+                </div>
+            </div>
         </div>
 
         <div id="pages" class="flex-container">
             <div id="slider-switch-l">
                 <p>🠜</p>
             </div>
-            <div id="slider-img">
-                <img src="smth.png" alt="img txt">
+            <div id="slider-img-space">
+                <img id="slider-img" src="" alt="img txt">
             </div>
             <div id="slider-block">
                 <div id="slider-title">
                     <p id="slider-title-txt">Page Title</p>
                 </div>
                 <div id="slider-text">
-                    <p id="slider-text-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
+                    <p id="slider-text-txt"></p>
                 </div>
                 <a id="slider-link">
                     <div id="slider-btn">
@@ -67,16 +64,18 @@
             </div>
         </div>
 
+        <h1 style="text-align: center; margin-top: 8vh; font-size: 50px">Why choose green and clean energy solutions?</h1>
+
         <div class="info-container flex-container background-l">
             <div class="info-container-image">
-                <img src="smth.png" alt="img txt">
+                <img src="./resources/deforestation.jpg" alt="img txt">
             </div>
             <div class="info-block">
                 <div class="info-block-title">
-                    <p>Section Title</p>
+                    <p>Protecting the Environment</p>
                 </div>
                 <div class="info-block-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
+                    <p>Traditional energy sources such as fossil fuels contribute significantly to deforestation, air and water pollution, and climate change. By opting for green and clean energy solutions, you can reduce your carbon footprint and help to preserve our planet’s natural resources for future generations.</p>
                 </div>
             </div>
         </div>
@@ -84,14 +83,42 @@
         <div class="info-container flex-container background-l">
             <div class="info-block">
                 <div class="info-block-title">
-                    <p>Section Title</p>
+                    <p>Improving Air Quality</p>
                 </div>
                 <div class="info-block-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue iaculis placerat. Maecenas lacinia lorem accumsan dui vulputate vestibulum. Curabitur interdum felis in nulla finibus, ac cursus ipsum pharetra. Vivamus quis mi odio. Aliquam gravida luctus nisi porta vestibulum. Vestibulum nec metus orci. Mauris eu posuere lorem. Aliquam interdum lacinia mi nec hendrerit. Integer gravida nunc risus, eget condimentum elit condimentum ut. Fusce pretium nibh ac sapien laoreet lobortis. Curabitur sagittis ex eget quam volutpat laoreet. In consequat leo at tortor posuere, auctor feugiat augue scelerisque.</p>
+                    <p>The burning of fossil fuels releases harmful pollutants into the air, this can lead to respiratory problems, cardiovascular diseases, and other health issues just by breathing in the air. Switching to clean energy sources can improve the air quality creating a healthier environment for us to live in.</p>
                 </div>
             </div>
             <div class="info-container-image">
-                <img src="smth.png" alt="img txt">
+                <img src="./resources/oilWell.JPG" alt="img txt">
+            </div>
+        </div>
+
+        <div class="info-container flex-container background-l">
+            <div class="info-container-image">
+                <img src="./resources/windfarm.jpg" alt="img txt">
+            </div>
+            <div class="info-block">
+                <div class="info-block-title">
+                    <p>Reducing Energy Costs</p>
+                </div>
+                <div class="info-block-text">
+                    <p>While the initial investment for most clean energy sources are high, they lead to significant savings in energy bills over time. By harnessing energy from renewable sources, we can reduce our dependence on fossil fuels which will eventually run out. Being able to rely on completely renewable and natural sources gives you financial security in the long run.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="info-container flex-container background-l">
+            <div class="info-block">
+                <div class="info-block-title">
+                    <p>Supporting Renewable Energy Development</p>
+                </div>
+                <div class="info-block-text">
+                    <p>Choosing green and clean energy solutions for your home sends a powerful message to policymakers and representatives in our communities and governments. This newfound demand will increase spending on renewable energy development which will further the movement towards fully renewable energy and protecting the environment. It will help develop infrastructure that will be able to support these solutions on a regional, state, national, and even global level. So your switch to sustainable energy can make a difference.</p>
+                </div>
+            </div>
+            <div class="info-container-image">
+                <img src="./resources/earth.jpg" alt="img txt">
             </div>
         </div>
 
