--- a/insulation.html
+++ b/insulation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Webmaster-2024</title>
     <link href="/styles/index.css" rel="stylesheet">
+    <link href="/styles/info.css" rel="stylesheet">
     <script type="module" src="./scripts/index.js"></script>
 </head>
 <body>
@@ -38,6 +39,20 @@
         </div>
     </div>
 
+    <div id="info-text">
+        <div id="info-desc">
+            <h2>About ----</h2>
+            <p> </p>
+        </div>
+        <div id="info-tax">
+            <h2>Tax Information</h2>
+            <p> </p>
+        </div>
+        <div id="info-environ">
+            <h2>Environmental Effect</h2>
+            <p> </p>
+        </div>
+    </div>
 
     <div id="footer" class="background-d flex-container">
         <div id="description">
