--- a/solar.html
+++ b/solar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Webmaster-2024</title>
     <link href="/styles/index.css" rel="stylesheet">
+    <link href="/styles/info.css" rel="stylesheet">
     <script type="module" src="./scripts/index.js"></script>
 </head>
 <body>
