--- a/insulation.html
+++ b/insulation.html
@@ -11,17 +11,17 @@
 <div id="pg-content">
     <div id="header">
         <div id="nav-bar" class="flex-container">
-            <a href="./index.html">
+            <a href="https://dukky0.github.io/webmaster-2024/index.html">
                 <div id="logo">
                     <p> EcoFriend </p>
                 </div>
             </a>
-            <a href="./initiatives.html">
+            <a href="https://dukky0.github.io/webmaster-2024/initiatives.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Initiatives </p>
                 </div>
             </a>
-            <a href="./credits.html">
+            <a href="https://dukky0.github.io/webmaster-2024/credits.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Credits </p>
                 </div>
@@ -31,7 +31,7 @@
 
     <div id="info-title">Home Insulation and Energy Efficient Appliances</div>
 
-    <a href="http://localhost:63342/webmaster-2024/index.html">
+    <a href="https://dukky0.github.io/webmaster-2024/index.html">
         <div id="return">Back to Home</div>
     </a>
 
