--- a/water.html
+++ b/water.html
@@ -31,7 +31,7 @@
 
     <div id="info-title">Passive Water Heating</div>
 
-    <a href="http://localhost:63342/webmaster-2024/index.html">
+    <a href="https://dukky0.github.io/webmaster-2024/index.html">
         <div id="return">Back to Home</div>
     </a>
 
