--- a/initiatives.html
+++ b/initiatives.html
@@ -34,12 +34,12 @@
 
         <div id="solution-cards">
             <div id="row-1" class="flex-container">
-                <a href="electricCar.html" id="electric-vehicles" class="card">
+                <a href="https://dukky0.github.io/webmaster-2024/electricCar.html" id="electric-vehicles" class="card">
                     <div class="card-title">
                         <b>Electric Vehicles</b>
                     </div>
                 </a>
-                <a href="solar.html" id="solar-energy" class="card">
+                <a href="https://dukky0.github.io/webmaster-2024/solar.html" id="solar-energy" class="card">
                     <div class="card-title">
                         <b>Solar Energy</b>
                     </div>
@@ -47,12 +47,12 @@
             </div>
 
             <div id="row-2" class="flex-container">
-                <a href="insulation.html" id="insulation" class="card">
+                <a href="https://dukky0.github.io/webmaster-2024/insulation.html" id="insulation" class="card">
                     <div class="card-title">
                         <b>Home Insulation</b>
                     </div>
                 </a>
-                <a href="water.html" id="passive-water-heating" class="card">
+                <a href="https://dukky0.github.io/webmaster-2024/water.html" id="passive-water-heating" class="card">
                     <div class="card-title">
                         <b>Passive Water Heating</b>
                     </div>
