--- a/insulation.html
+++ b/insulation.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Webmaster-2024</title>
-    <link href="/styles/index.css" rel="stylesheet">
-    <link href="/styles/info.css" rel="stylesheet">
+    <link href="https://dukky0.github.io/webmaster-2024/styles/index.css" rel="stylesheet">
+    <link href="https://dukky0.github.io/webmaster-2024/styles/info.css" rel="stylesheet">
     <script type="module" src="./scripts/index.js"></script>
 </head>
 <body>
