--- a/water.html
+++ b/water.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Webmaster-2024</title>
-    <link href="/styles/index.css" rel="stylesheet">
-    <link href="/styles/info.css" rel="stylesheet">
+    <link href="https://dukky0.github.io/webmaster-2024/styles/index.css" rel="stylesheet">
+    <link href="https://dukky0.github.io/webmaster-2024/styles/info.css" rel="stylesheet">
     <script type="module" src="./scripts/index.js"></script>
 </head>
 <body>
 <div id="pg-content">
     <div id="header">
         <div id="nav-bar" class="flex-container">
-            <a href="./index.html">
+            <a href="https://dukky0.github.io/webmaster-2024/index.html">
                 <div id="logo">
                     <p> EcoFriend </p>
                 </div>
             </a>
-            <a href="./initiatives.html">
+            <a href="https://dukky0.github.io/webmaster-2024/initiatives.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Initiatives </p>
                 </div>
             </a>
-            <a href="./credits.html">
+            <a href="https://dukky0.github.io/webmaster-2024/credits.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Credits </p>
                 </div>
