--- a/initiatives.html
+++ b/initiatives.html
@@ -12,7 +12,7 @@
             <div id="nav-bar" class="flex-container">
                 <a href="https://dukky0.github.io/webmaster-2024/index.html">
                     <div id="logo">
-                        <p> Placeholder </p>
+                        <p> EcoFriend </p>
                     </div>
                 </a>
                 <a href="https://dukky0.github.io/webmaster-2024/initiatives.html">
