--- a/electricCar.html
+++ b/electricCar.html
@@ -47,7 +47,7 @@
         </div>
         <div id="info-tax">
             <h2>Tax Information</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Could potentially qualify for tax credits up to $7,500 <a>https://www.irs.gov/credits-deductions/credits-for-new-clean-vehicles-purchased-in-2023-or-after</a></p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Could potentially qualify for tax credits up to $7,500</p>
         </div>
         <div id="info-environ">
             <h2>Additional Information</h2>
