--- a/insulation.html
+++ b/insulation.html
@@ -43,7 +43,7 @@
         </div>
         <div id="info-tax">
             <h2>Tax Information</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Certified products such as insulation, caulk, spray foam, and other insulation products qualify for a 30% tax credit up to $1,200 <a>https://www.energystar.gov/about/federal_tax_credits/insulation</a></p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Certified products such as insulation, caulk, spray foam, and other insulation products qualify for a 30% tax credit up to $1,200</p>
         </div>
         <div id="info-environ" style="margin-bottom: 11vh">
             <h2>Additional Information</h2>
