--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Webmaster-2024</title>
     <link href="https://dukky0.github.io/webmaster-2024/styles/index.css" rel="stylesheet">
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js" defer></script>
 </head>
 <body>
     <div id="pg-content">
