--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <p>🠜</p>
             </div>
             <div id="slider-img-space">
-                <img id="slider-img" src="" alt="img txt">
+                <img id="slider-img" src="" alt="img loading">
             </div>
             <div id="slider-block">
                 <div id="slider-title">
-                    <p id="slider-title-txt">Page Title</p>
+                    <p id="slider-title-txt">Page Loading</p>
                 </div>
                 <div id="slider-text">
                     <p id="slider-text-txt"></p>
