--- a/credits.html
+++ b/credits.html
@@ -105,7 +105,7 @@
     </div>
 
     <h1 style="text-align: center; padding-top: 8vh; font-size: 50px">Forms</h1>
-    <a target="_blank" href="https://dukky0.github.io/webmaster-2024/resources/" style="text-align: center; font-size: 30px; text-decoration: underline">Plan of Work and Copyright Checklist</a>
+    <a target="_blank" href="https://dukky0.github.io/webmaster-2024/resources/" style="text-align: center; padding-top: 8vh; margin-left: 32.5%; margin-bottom: 8vh; font-size: 40px; text-decoration: underline">Plan of Work and Copyright Checklist</a>
 
     <div id="footer" class="background-d flex-container">
         <div id="description">
