--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <div id="footer" class="background-d flex-container">
             <div id="description">
-                <p class="white-txt">Virginia TSA State Conference 2024</p>
+                <p class="white-txt">National TSA Conference 2024 Orlando, Florida</p>
             </div>
         </div>
     </div>
